tests/negative/bad_goto.def
// Unit test for bad goto -- a goto without a defined label.

def foo () -> void
begin
    goto bar;
end
